[gd_scene load_steps=6 format=3 uid="uid://gpi40i31e6yc"]

[ext_resource type="Script" path="res://Assets/Breakable/xr_pickable_glass.gd" id="1_ew5wt"]
[ext_resource type="PackedScene" uid="uid://bvhy1ac4eig1n" path="res://Assets/Breakable/glass.tscn" id="2_bpjmf"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand.gd" id="3_jdsdy"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_iw4qb"]
height = 0.641
radius = 0.11

[sub_resource type="SphereShape3D" id="SphereShape3D_3puav"]

[node name="xr_pickable_glass" type="RigidBody3D"]
collision_layer = 65537
script = ExtResource("1_ew5wt")
press_to_hold = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.328, 0)
shape = SubResource("CylinderShape3D_iw4qb")

[node name="Breakable_Bottle" parent="." instance=ExtResource("2_bpjmf")]
fragment_collission_layer = 1
fragment_collission_mask = 1

[node name="glass_bottle_fractured" parent="Breakable_Bottle" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.007, 0.0384429, 0)
visible = false

[node name="XRToolsGrabPointHand2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0715027, 0.567253, -0.0847684)
script = ExtResource("3_jdsdy")
hand = 1
mode = 1

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(0.490042, 0, 0, 0, 1.02843, 0, 0, 0, 0.469972, 0, 0.297374, 0)
shape = SubResource("SphereShape3D_3puav")

[node name="canbreak" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="dropped" from="." to="." method="_on_dropped"]
[connection signal="body_entered" from="Area3D" to="Breakable_Bottle" method="_on_area_3d_body_entered"]
[connection signal="timeout" from="canbreak" to="." method="_on_canbreak_timeout"]

[editable path="Breakable_Bottle"]
[editable path="Breakable_Bottle/glass_bottle"]
